<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Github-User-App</string>
    <string name="dummy_name_detail">Dummy Name Detail</string>
    <string name="dummy_username">dummy username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_1">Following</string>
    <string name="tab_2">Followers</string>
    <string name="dummy_followers">xx Followers</string>
    <string name="dummy_following">xx Following</string>
    <string name="search">Search</string>
    <string name="profilephoto">profilePhoto</string>
    <string name="following" tools:ignore="PluralsCandidate">%d Following</string>
    <plurals name="followers">
        <item quantity="one">%d Follower</item>
        <item quantity="other">%d Followers</item>
    </plurals>
    <string name="tabs">Tabs</string>
    <string name="viewpager">viewPager</string>
    <string name="img_profile">image Profile</string>
    <string name="dark_mode">dark_mode</string>
    <string name="setting">Setting</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="menu_favorite">Menu Favorite</string>
    <string name="share_user">Share User</string>
    <string name="title_favoriteuser">FavoriteUser</string>

</resources>